--- a/module-1-layout/03-layout-3/index1.html
+++ b/module-1-layout/03-layout-3/index1.html
@@ -10,6 +10,17 @@
   <div>
     Cuando llega a 1fr, crea una nueva columna y el tamaño es como minimo 160px.
   </div>
+  <ul>
+    <li>
+      minmax: Sirve para definir un valor dentro de un rango.
+    </li>
+    <li>
+      auto-fill: crea nuevas celdas de minimo tamaño vacios cuando tiene espacio libre.
+    </li>
+    <li>
+      auto-fit: reparte el espacio libre entre los elementos existentes.
+    </li>
+  </ul>
   <div class="root">
       <img src="./landscapes/l1.jpg">
       <img src="./landscapes/l2.jpg">
