Resumen módulo layout, sesión 3 (grid).

--- a/module-1-layout/03-layout-3/index1.html
+++ b/module-1-layout/03-layout-3/index1.html
@@ -20,6 +20,12 @@
     <li>
       auto-fit: reparte el espacio libre entre los elementos existentes.
     </li>
+    <li>
+      Para ver las diferencia entre auto-fill y auto-fit, dejamos solo 3 elementos y aumentamos el tamaño del contenedor:
+
+con auto-fill: se crean los huecos de 160px aunque no tenga elemento.
+con auto-fit: los 3 elementos crecen porque no hay mas elementos.
+    </li>
   </ul>
   <div class="root">
       <img src="./landscapes/l1.jpg">
