--- a/module-1-layout/lab/Basic/Ex-3/index.html
+++ b/module-1-layout/lab/Basic/Ex-3/index.html
@@ -5,8 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="mystyle.scss" />
-    <title>🍋 Lab. Basic - Exercise 2 🍋</title>
+    <title>🍋 Lab. Basic - Exercise 3 🍋</title>
   </head>
   <body>
+    <h3>
+    🍋 Lemoncode 🍋
+    </h3>
+    <div class="navBar">
+      <div class="navItem">
+        <span class="text">Home</span>
+      </div>
+      <div class="navItem">
+        <span class="text">Blog</span>
+      </div>
+      <div class="navItem">
+        <span class="text">Activities</span>
+      </div>
+      <div class="navItem">
+        <span class="text">About me</span>
+      </div>
+    </div>
   </body>
 </html>
