--- a/module-1-layout/lab/Basic/Ex-3/index.html
+++ b/module-1-layout/lab/Basic/Ex-3/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h3>
-    🍋 Lemoncode 🍋
+    🍋 Lemoncode 🍋 - test
     </h3>
     <div class="navBar">
       <div class="navItem">
