Refactor variables and readmes.

--- a/module-1-layout/lab/Basic/Ex-3/index.html
+++ b/module-1-layout/lab/Basic/Ex-3/index.html
@@ -8,9 +8,7 @@
     <title>🍋 Lab. Basic - Exercise 3 🍋</title>
   </head>
   <body>
-    <h3>
-    🍋 Lemoncode 🍋 - test
-    </h3>
+    <h3>🍋 Lemoncode 🍋</h3>
     <div class="navBar">
       <div class="navItem">
         <span class="text">Home</span>
