Update exercise 1 title name.

--- a/module-1-layout/lab/Basic/Ex-1/index.html
+++ b/module-1-layout/lab/Basic/Ex-1/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="mystyle.scss" />
-    <title>🍋 Lab. Básico - Ejercicio 1 🍋</title>
+    <title>🍋 Lab. Básico - Exercise 1 🍋</title>
   </head>
   <body>
     <div class="container-1">
